# src/swagger/swagger.json
@@ -30,7 +30,7 @@
           "API Endpoints"
         ],
         "summary": "Find all words",
-        "description": "List all words from the database.",
+        "description": "List all words from the dictionary.",
         "responses": {
           "200": {
             "description": "OK"
@@ -113,20 +113,21 @@
         }
       }
     },
-    "/v1/words/{id}": {
+    "/v1/words/{sourceWord}": {
       "get": {
         "tags": [
           "API Endpoints"
         ],
-        "summary": "Get one word",
-        "description": "Retrieve a single word by its ID.",
+        "summary": "Find the translation of a word.",
+        "description": "Get a specific word's translation using its source word.",
         "parameters": [
           {
-            "name": "id",
+            "name": "sourceWord",
             "in": "path",
             "required": true,
             "type": "string",
-            "description": "Word ID"
+            "description": "English source word",
+            "example": "love"
           }
         ],
         "responses": {
@@ -140,7 +141,9 @@
             "description": "Not Found"
           }
         }
-      },
+      }
+    },
+    "/v1/words/{id}": {
       "put": {
         "tags": [
           "API Endpoints"
